--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .DS_Store
 .temp
 node_modules/
+Platforms/ios/build
+Platforms/ios/Pods
+Platforms/ios/bundlejs
 /dist/
 npm-debug.log*
 yarn-debug.log*
