--- a/platforms/ios/WeexDemo/WeexDemo-Info.plist
+++ b/platforms/ios/WeexDemo/WeexDemo-Info.plist
@@ -54,5 +54,9 @@
   <string>bundlejs/index.js</string>
   <key>WXSocketConnectionURL</key>
   <string>ws://192.168.13.229:8080</string>
+  <key>WXEntryBundleURL</key>
+  <string>bundlejs/index.js</string>
+  <key>WXSocketConnectionURL</key>
+  <string>ws://192.168.13.229:8080</string>
 </dict>
 </plist>
